@@ -3,7 +3,7 @@ author           = Richard Simões <rsimoes AT cpan DOT org>
 license          = MIT
 copyright_holder = Richard Simões
 copyright_year   = 2012
-version          = v0.1.8
+version          = v0.1.9
 
 [@Filter]
 -bundle = @Basic
