@@ -415,13 +415,13 @@ b.br
 bio.br
 blog.br
 bmd.br
-can.br
 cim.br
 cng.br
 cnt.br
 com.br
 coop.br
 ecn.br
+eco.br
 edu.br
 emp.br
 eng.br
@@ -442,6 +442,7 @@ ind.br
 inf.br
 jor.br
 jus.br
+leg.br
 lel.br
 mat.br
 med.br
@@ -5899,60 +5900,87 @@ ne.tz
 or.tz
 sc.tz
 
-// ua : http://www.nic.net.ua/
+// ua : https://hostmaster.ua/policy/?ua
+// Submitted by registry <dk@cctld.ua> 2012-04-27
 ua
+// ua 2LD
 com.ua
 edu.ua
 gov.ua
 in.ua
 net.ua
 org.ua
-// ua geo-names
+// ua geographic names
+// https://hostmaster.ua/2ld/
 cherkassy.ua
+cherkasy.ua
 chernigov.ua
+chernihiv.ua
+chernivtsi.ua
 chernovtsy.ua
 ck.ua
 cn.ua
+cr.ua
 crimea.ua
 cv.ua
 dn.ua
 dnepropetrovsk.ua
+dnipropetrovsk.ua
+dominic.ua
 donetsk.ua
 dp.ua
 if.ua
 ivano-frankivsk.ua
 kh.ua
+kharkiv.ua
 kharkov.ua
 kherson.ua
 khmelnitskiy.ua
+khmelnytskyi.ua
 kiev.ua
 kirovograd.ua
 km.ua
 kr.ua
+krym.ua
 ks.ua
 kv.ua
+kyiv.ua
 lg.ua
+lt.ua
 lugansk.ua
 lutsk.ua
+lv.ua
 lviv.ua
 mk.ua
+mykolaiv.ua
 nikolaev.ua
 od.ua
+odesa.ua
 odessa.ua
 pl.ua
 poltava.ua
+rivne.ua
 rovno.ua
 rv.ua
+sb.ua
 sebastopol.ua
+sevastopol.ua
+sm.ua
 sumy.ua
 te.ua
 ternopil.ua
+uz.ua
 uzhgorod.ua
 vinnica.ua
+vinnytsia.ua
 vn.ua
+volyn.ua
+yalta.ua
 zaporizhzhe.ua
-zp.ua
+zaporizhzhia.ua
 zhitomir.ua
+zhytomyr.ua
+zp.ua
 zt.ua
 
 // Private registries in .ua
@@ -6231,8 +6259,14 @@ pvt.k12.ma.us
 chtr.k12.ma.us
 paroch.k12.ma.us
 
-// uy : http://www.antel.com.uy/
-*.uy
+// uy : http://www.nic.org.uy/
+uy
+com.uy
+edu.uy
+gub.uy
+mil.uy
+net.uy
+org.uy
 
 // uz : http://www.reg.uz/
 uz
@@ -6254,8 +6288,19 @@ gov.vc
 mil.vc
 edu.vc
 
-// ve : http://registro.nic.ve/nicve/registro/index.html
-*.ve
+// ve : https://registro.nic.ve/
+// Confirmed by registry 2012-10-04
+ve
+co.ve
+com.ve
+e12.ve
+edu.ve
+gov.ve
+info.ve
+mil.ve
+net.ve
+org.ve
+web.ve
 
 // vg : http://en.wikipedia.org/wiki/.vg
 vg
@@ -6495,15 +6540,20 @@ priv.at
 co.ca
 
 // CentralNic : http://www.centralnic.com/names/domains
-// Confirmed by registry <gavin.brown@centralnic.com> 2008-06-09
+// Confirmed by registry <gavin.brown@centralnic.com> 2012-09-27
+ae.org
 ar.com
 br.com
 cn.com
+com.de
 de.com
 eu.com
 gb.com
+gb.net
 gr.com
 hu.com
+hu.net
+jp.net
 jpn.com
 kr.com
 no.com
@@ -6511,17 +6561,13 @@ qc.com
 ru.com
 sa.com
 se.com
+se.net
 uk.com
+uk.net
 us.com
+us.org
 uy.com
 za.com
-gb.net
-jp.net
-se.net
-uk.net
-ae.org
-us.org
-com.de
 
 // Opera Software, A.S.A.
 // Requested by Yngve Pettersen <yngve@opera.com> 2009-11-26
