@@ -1,4 +1,7 @@
 {{$NEXT}}
+    - Removed dependency on Regexp::Common, as it is relying on a supersceded
+      RFC for its domain name regular expression.
+    - Updated bundled list to latest version (revision 12b5f4b2f299).
 
 v0.1.8    2012-08-29 14:06:38 America/Chicago
     - Updated bundled list to latest version.
